syntax = "proto3";

//Configs

option java_multiple_files = true;
option java_package = "com.mibanco.transaccionloterenovacioncdt.us";
option java_outer_classname = "TransaccionLoteRenovacionCDT";

package TransaccionLoteRenovacionCDT;

message RenovacionCDTType {
  int32 numCertificadoCancelar= 1;
  int32 numeroCliente= 2;
  NumeroProductoCDTEnum numeroProductoCDT= 3;
  TipoRenovacionEnum tipoRenovacion= 4;
  int32 plazoDias= 5;
  string plazo= 6;
  int32 fechaVencimientoDia= 7;
  int32 fechaVencimientoMes= 8;
  int32 fechaVencimientoAno= 9;
  string codigoBanco= 10;
  int32 codigoSucursal= 11;
  string condicionManejo= 12;
  string compensacion= 13;
  string tipoProrroga= 14;
  string cuentaDePago= 15;
  int32 numeroCuentaContable= 16;
  int32 concepto= 17;
  string cuentaConcepto= 18;
  string monedaPago= 19;
  int32 montoCapital= 20;
  string tipoPersona= 21;
  string numeroDocumento= 22;
  string nombreCliente= 23;
  TipoTransaccionEnum tipoTransaccion= 24;
  CodigoBancoEnum codigoBancoDestino= 25;
  int32 numeroCuentaBancaria= 26;
  string referencia= 27;
  TransaccionLoteRenovacionCDT_Type transaccionRenovacion= 28;
}

message GuardarRenovacionesCDTInput{
  string cantidadCDTs = 1;
  RenovacionCDTType lista = 2;
}

message TransaccionLoteRenovacionCDT_Type{
  int32 numCertificadoCancelar = 1;
  int32 numCertificadoNuevo = 2;
  int32 numeroCliente = 3;
  string codigoLote = 4;
  EstadoRenovacionEnum estadoRenovacion = 5;
  TipoProcesoEnum tipoProceso = 6;
}


message CodigoBancoEnum{
  string _1001 = 1;
  string _1002 = 2;
  string _1006 = 3;
  string _1007 = 4;
  string _1009 = 5;
  string _1012 = 6;
  string _1013 = 7;
  string _1014 = 8;
  string _1019 = 9;
  string _1023 = 10;
  string _1031 = 11;
  string _1032 = 12;
  string _1040 = 13;
  string _1047 = 14;
  string _1051 = 15;
  string _1052 = 16;
  string _1053 = 17;
  string _1059 = 18;
  string _1060 = 19;
  string _1061 = 20;
  string _1062 = 21;
  string _1063 = 22;
  string _1065 = 23;
  string _1066 = 24;
  string _1067 = 25;
  string _1069 = 26;
  string _1071 = 27;
  string _1086 = 28;
  string _1121 = 29;
  string _1151 = 30;
  string _1283 = 31;
  string _1289 = 32;
  string _1291 = 33;
  string _1292 = 34;
  string _1303 = 35;
  string _1370 = 36;
  string _1507 = 37;
  string _1551 = 38;
  string _1558 = 39;
  string _1637 = 40;
}

message NumeroProductoCDTEnum{
  string D180 = 1;
  string D360 = 2;
  string D540 = 3;
  string D541 = 4;
}

message TipoRenovacionEnum{
  string _1 = 1;
  string _2 = 2;
  string _4 = 3;
}

message TipoTransaccionEnum{
  string _37 = 1;
  string _27 = 2;
}

message TipoProcesoEnum{
  string CANCELACION = 1;
  string RENOVACI0N = 2;
}

message EstadoRenovacionEnum{
  string ERROR_DATOS = 1;
  string EXITOSO = 2;
  string NO_EXITOSO = 3;
  string POR_PROCESAR = 4;
}

message ResponseGuardarRenovacionesCDT{
  RenovacionCDTType rpt = 1;
}

message ResponseListGuardarRenovacionesCDT{
  repeated RenovacionCDTType rpt = 1;
}

message ConsultarRenovacionesPorLoteYEstadoInput{
  string codigoLote = 1;
  EstadoRenovacionEnum estadoRenovacion = 2;
}



service TransaccionLoteRenovacionGrpc{
  rpc guardarRenovacionesCDT(GuardarRenovacionesCDTInput) returns (ResponseGuardarRenovacionesCDT);
  rpc consultarRenovacionesPorLoteYEstado(ConsultarRenovacionesPorLoteYEstadoInput) returns ( stream ResponseListGuardarRenovacionesCDT);
}
